--- a/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA3/informea.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA3/informea.xhtml
@@ -42,16 +42,17 @@
    		<h:column>
    			<f:facet name="header">Gastu totala</f:facet>
    			#{produktua.kopurua}
-   		</h:column>   		
+   		</h:column>
+  </h:dataTable>	   		
    	<h:dataTable value="#{adminLaburpenakViewMB.produktuenEgoerakLortuDB(administrariAtazakMB.labFesta)}" var="produktua">
-   		<h:column></h:column>>
-   			<f:facet name="header">Kontsumo Totala</f:facet>
+   		<h:column>
+   			<f:facet name="header">Kontsumo totala</f:facet>
    			#{produktua.kopurua}
-   		</h:column>   		
+   		</h:column>  		
    		   		  		  				
-    </h:dataTable>	   		  		  				
+      		  		  				
     </h:dataTable>
-	</h:panelGroup>	
+		
 </ui:define>
 </ui:composition>
 </html>
