01 aukera prezioak ondo

--- a/VirtualMaid/src/main/webapp/index.html
+++ b/VirtualMaid/src/main/webapp/index.html
@@ -9,7 +9,7 @@
     <div class="container">
     <table>
       <tr>
-        <td><a href="EDUKIAK/orduak.html"><button><img id="imga" src="EDUKIAK/IRUDIAK/argia.jpg"> AUKERA 01</button></a></td>
+        <td><a href="EDUKIAK/orduak.xhtml"><button><img id="imga" src="EDUKIAK/IRUDIAK/argia.jpg"> AUKERA 01</button></a></td>
       </tr>
       <tr>
         <td><a href="EDUKIAK/historiala.html"><button><img id="imga" src="EDUKIAK/IRUDIAK/diario.jpg"> AUKERA 02</button></a></td>
