--- a/VirtualMaid/src/main/webapp/index.html
+++ b/VirtualMaid/src/main/webapp/index.html
@@ -10,6 +10,9 @@
     <table>
       <tr>
         <td><a href="EDUKIAK/orduak.xhtml"><button><img id="imga" src="EDUKIAK/IRUDIAK/argia.jpg"> AUKERA 01</button></a></td>
+        <!-- <form id="form-1" action="EDUKIAK/ADMIN/adminKudeaketa.xhtml">
+	                <input type="submit" value="ADMINISTRARIA" id="button-1"/>
+	    </form> -->
       </tr>
       <tr>
         <td><a href="EDUKIAK/historiala.html"><button><img id="imga" src="EDUKIAK/IRUDIAK/diario.jpg"> AUKERA 02</button></a></td>
