--- a/VirtualMaid/src/main/webapp/EDUKIAK/orduak.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/orduak.xhtml
@@ -12,10 +12,11 @@
     <!-- Crea el menú con cuatro botones -->
     <div class="container">
     <h:dataTable value="#{prezioAukeraketaViewMB.egunekoPrezioakLortu()}" var="prezioa"> 
-            <h:column>
-            	<f:facet name="header"><h:outputText value="#{erabiltzaileAtazakMB.ordua}" /></f:facet>
-            	<h:commandButton class="#{prezioa.kolorea}" actionListener="#{erabiltzaileAtazakMB.orduaMantendu(prezioa.ordua,prezioAukeraketaViewMB)}" id="submit" value="#{prezioa.informazioa}" />  
-            </h:column>                
+        <h:column>
+        	<h:form>
+        	<h:commandButton class="#{prezioa.kolorea}" actionListener="#{erabiltzaileAtazakMB.orduaMantendu(prezioa.ordua,prezioAukeraketaViewMB)}" id="submit" value="#{prezioa.informazioa}" />
+        	</h:form>  
+        </h:column>                
     </h:dataTable>
     <br></br> 
     <br></br>
