--- a/VirtualMaid/src/main/webapp/index.html
+++ b/VirtualMaid/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 	    </form> -->
       </tr>
       <tr>
-        <td><a href="EDUKIAK/historiala.html"><button><img id="imga" src="EDUKIAK/IRUDIAK/diario.jpg"> AUKERA 02</button></a></td>
+        <td><a href="EDUKIAK/historiala.xhtml"><button><img id="imga" src="EDUKIAK/IRUDIAK/diario.jpg"> AUKERA 02</button></a></td>
       </tr>
       <tr>
         <td><a href="EDUKIAK/grafikak.html"><button><img id="imga" src="EDUKIAK/IRUDIAK/historial.jpg"> AUKERA 03</button></a></td>
