02 aukera, linkak ondo

--- a/VirtualMaid/src/main/webapp/index.html
+++ b/VirtualMaid/src/main/webapp/index.html
@@ -21,7 +21,7 @@
         <td><a href="EDUKIAK/grafikak.html"><button><img id="imga" src="EDUKIAK/IRUDIAK/historial.jpg"> AUKERA 03</button></a></td>
       </tr>
       <tr>
-        <td><a href=""></a><button><img id="imga" src="EDUKIAK/IRUDIAK/engranaje.jpg"> AUKERA 04</button></a></td>
+        <td><a href="EDUKIAK/gailuakEditatu.xhtml"><button><img id="imga" src="EDUKIAK/IRUDIAK/engranaje.jpg"> AUKERA 04</button></a></td>
       </tr>
     </table>
     </div>
