--- a/VirtualMaid/src/main/webapp/EDUKIAK/historiala.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/historiala.xhtml
@@ -9,6 +9,11 @@
     <script type="text/javascript" src="historiala.js"></script>
 </head>
 <body>
+<SCRIPT type="text/javascript">
+function prepareRegister() {
+	document.getElementById("commandButton").submit();
+	}
+</SCRIPT>
     <br />
 <div class="cd-schedule loading" style="position:absolute;left:30%;">
 	<div class="timeline">
@@ -70,23 +75,19 @@
 				<ul>
 					<ui:repeat  value="#{historialaViewMB.etxekoGailuakLortu()}" var="erregistroa">
 					<li class="single-event" data-start="#{erregistroa.hasieraOrdua}" data-end="#{erregistroa.amaieraOrdua}" data-event="event-4">
-						<button>
-							<span class="event-date">09:30 - 11:30</span>
-							<em class="event-name">#{erregistroa.gailuIzena}</em>
-						</button>
+						<h:form>
+						<h:commandLink actionListener="#{erabiltzaileAtazakMB.programaEditatu01(erregistroa.id)}">
+						  <span class="event-date">#{erregistroa.hasieraOrdua} - #{erregistroa.amaieraOrdua}</span>
+						  <em class="event-name">#{erregistroa.gailuIzena}</em>
+						</h:commandLink>
+						</h:form>
 					</li>
 					</ui:repeat>
 				</ul>
 			</li>
-<!--        -->
 		</ul>
 	</div>
-	<ui:repeat  value="#{historialaViewMB.etxekoGailuakLortu()}" var="erregistroa">
-	<div >
-	</div>
-	</ui:repeat>
 
-	
 </div> <!-- .cd-schedule -->
 </body>
 </html>
