--- a/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA3/informea.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA3/informea.xhtml
@@ -43,22 +43,26 @@
 		</tr>
 	</table>
  </h:form>
+ <h:panelGroup rendered="#{aukera3AtazakMB.labOrrModua==0}">
+ <h2>HILABETE HONETAN EGINDAKO KONTSUMOA</h2>
+ <!-- Default moduan hilabeteko kontsumoa sartu -->
+ </h:panelGroup>	
  <h:panelGroup rendered="#{aukera3AtazakMB.labOrrModua==1}">	
  <h2>HAUTATUTAKO DATEN ARTEAN EGINDAKO KONTSUMOA</h2>
- 	<h:dataTable value="#{aukera3ViewMB.historialaLortu(aukera3FormMB)}" var="erregistroa">
-   		<h:column>
-   			<f:facet name="header">Gastu totala</f:facet>
-   			#{produktua.kopurua}
+ 	<h:dataTable value="#{aukera3ViewMB.kontsumoaLortu(aukera3ViewMB)}" var="kontsumoa">
+ 		<h:column>
+   			<f:facet name="header">Data</f:facet>
+   			#{kontsumoa.data}
    		</h:column>
-	</h:dataTable>	   		
- 	<h:dataTable value="#{adminLaburpenakViewMB.produktuenEgoerakLortuDB(administrariAtazakMB.labFesta)}" var="produktua">
    		<h:column>
    			<f:facet name="header">Kontsumo totala</f:facet>
-   			#{produktua.kopurua}
-   		</h:column>  		
-   		   		  		  				
-      		  		  				
-	</h:dataTable>
+   			#{kontsumoa.kontsumoa}
+   		</h:column>
+   		<h:column>
+   			<f:facet name="header">Gastu totala</f:facet>
+   			#{kontsumoa.prezioa}
+   		</h:column>
+	</h:dataTable>	   		
 </h:panelGroup>	
 </ui:define>
 </ui:composition>
