--- a/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA3/informea.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA3/informea.xhtml
@@ -10,7 +10,7 @@
 	<table class="borderIkustezina">
 		<tr>
 			<td class="borderIkustezina">
-				<form action="#{request.contextPath}/index.xhtml">
+				<form action="#{request.contextPath}/index.html">
 					<input type="submit" id="submit" value="HOME" />
 				</form>
 			</td>
