--- a/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA3/informea.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA3/informea.xhtml
@@ -32,7 +32,7 @@
 			</td>
 			<td class="tdErdiratuta borderIkustezina" style="width: 50%;">
 				NORA:
-				<h:inputText value="#{aukera3formMB.nora}" id="nora" required="true" requiredMessage="ERROREA: Data (NORA) eremua derrigorrezkoa da">
+				<h:inputText value="#{aukera3FormMB.nora}" id="nora" required="true" requiredMessage="ERROREA: Data (NORA) eremua derrigorrezkoa da">
 					<f:convertDateTime type="date" pattern="yyyy/MM/dd" timeZone="CET"/>
   				</h:inputText>	
   				<h:message for="nora" style="color:red" />				
