--- a/VirtualMaid/src/main/webapp/EDUKIAK/programaEditatu.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/programaEditatu.xhtml
@@ -51,7 +51,7 @@
                     <h:message for="mota" style="color:red" />
                 </td>                    
                 <td>
-                <h:commandButton class="ekintza" actionListener="#{erabiltzaileAtazakMB.programaEditatu02(gailuBerria, historialaViewMB)}" id="submit" value="GORDE ALDAKETA" />            
+                <h:commandButton class="ekintza" actionListener="#{erabiltzaileAtazakMB.programaEditatu02(programa, historialaViewMB)}" id="submit" value="GORDE ALDAKETA" />            
                 </td>
             </tr>  
     </ui:repeat>      
