--- a/VirtualMaid/src/main/webapp/EDUKIAK/TXANT/txantiloia.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/TXANT/txantiloia.xhtml
@@ -1,13 +1,3 @@
-<!--
- Copyright (C) 2022 Maider Huarte Arrayago
-
- txantiloia.xhtml is part of ZTA_P5-1_LAGUNTZA.zip.
-
- ZTA_P5-1_LAGUNTZA.zip is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 or any later version.
-
- ZTA_P5-1_LAGUNTZA.zip is distributed for LEARNING PURPOSES ONLY, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details <http://www.gnu.org/licenses/>.
--->
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
@@ -15,13 +5,12 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" type="text/css" href="#{request.contextPath}/EDUKIAK/ESTILOAK/estiloa.css" />
-	<title><ui:insert name="headTitle">GAZTE-LOKALAREN WEBGUNEA</ui:insert></title>
+	<link rel="stylesheet" type="text/css" href="#{request.contextPath}/EDUKIAK/ESTILOA/informea.css" />
+	<title><ui:insert name="headTitle">VIRTUAL MAID</ui:insert></title>
 </h:head> 
 <h:body>
 	<ui:insert name="bodyBurua" /><br />
 	<h1><ui:insert name="bodyIzenburua" /></h1>
 	<ui:insert name="bodyEdukia"/>
-	<br /><br /><ui:insert name="bodyOina">2022-2023 ZTA</ui:insert>
 </h:body>
 </html>
