--- a/VirtualMaid/src/main/webapp/EDUKIAK/historiala.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/historiala.xhtml
@@ -9,12 +9,9 @@
     <script type="text/javascript" src="historiala.js"></script>
 </head>
 <body>
-<SCRIPT type="text/javascript">
-function prepareRegister() {
-	document.getElementById("commandButton").submit();
-	}
-</SCRIPT>
-    <br />
+<form class="menuNagusirakoBotoia" action="#{request.contextPath}/index.html">
+	<input class="menuNagusirakoBotoiaInput" type="submit" id="submit" value="HOME" />
+</form>
 <div class="cd-schedule loading" style="position:absolute;left:30%;">
 	<div class="timeline">
 		<ul>
@@ -71,10 +68,10 @@ function prepareRegister() {
 	<div class="events">
 		<ul class="wrap">
 			<li class="events-group">
-				<div class="top-info"><span>ASTELEHENA</span></div>
+				<div class="top-info"><span>#{historialaViewMB.astekoEgunaLortu()}</span></div>
 				<ul>
 					<ui:repeat  value="#{historialaViewMB.etxekoGailuakLortu()}" var="erregistroa">
-					<li class="single-event" data-start="#{erregistroa.hasieraOrdua}" data-end="#{erregistroa.amaieraOrdua}" data-event="event-4">
+					<li class="single-event" data-start="#{erregistroa.hasieraOrdua}" data-end="#{erregistroa.amaieraOrdua}" data-event="event-4" style="width: 100%">
 						<h:form>
 						<h:commandLink actionListener="#{erabiltzaileAtazakMB.programaEditatu01(erregistroa.id)}" rendered="#{erregistroa.hasieraOrduaInt gt erabiltzaileAtazakMB.currentHout}">
 						  <span class="event-date">#{erregistroa.hasieraOrdua} - #{erregistroa.amaieraOrdua}</span>
