--- a/VirtualMaid/src/main/webapp/EDUKIAK/orduak.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/orduak.xhtml
@@ -8,6 +8,9 @@
     <title>Menú con botones</title>
     <link rel="stylesheet" href="ESTILOA/orduak.css"></link>
   </head> 
+  <form class="menuNagusirakoBotoia" action="#{request.contextPath}/index.html">
+	<input class="menuNagusirakoBotoiaInput" type="submit" id="submit" value="HOME" />
+  </form>
   <body id="body">
     <!-- Crea el menú con cuatro botones -->
     <div class="container">
