--- a/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA3/informea2.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/AUKERA3/informea2.xhtml
@@ -11,20 +11,107 @@
 <form class="menuNagusirakoBotoia" action="#{request.contextPath}/index.html">
 	<input class="menuNagusirakoBotoiaInput" type="submit" id="submit" value="HOME" />
 </form>
+<div class="container">
+    <div class="column">
+      <canvas id="myChartAste"></canvas>
+    </div> 
+    <div class="column">
+      <canvas id="myChartHilabete"></canvas>
+    </div>
+  </div>
+<h:outputScript>
+// Obtenemos el canvas por su id
+const ctxA = document.getElementById('myChartAste').getContext('2d');
+const ctxH = document.getElementById('myChartHilabete').getContext('2d');
+
+const dataAD = #{aukera3ViewMB.astekoKontsumoaLortu()};
+const dataHD = #{aukera3ViewMB.kontsumoaHilabetekaLortu()};
+
+const backgroundColor = Array(7).fill('rgba(255, 99, 132, 0.2)');
+const borderColor = Array(7).fill('rgba(255, 99, 132, 1)');
+
+// Datos para el histograma
+const dataA = {
+  labels: ['Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado', 'Domingo'],
+  datasets: [{
+    label: 'Ejemplo de histograma',
+    data: dataAD,
+    backgroundColor: backgroundColor,
+    borderColor: borderColor,
+    borderWidth: 1
+  }]
+};
+
+// Configuración del histograma
+const optionsA = {
+  scales: {
+    x: {
+      title: {
+        display: true,
+        text: 'Días de la semana'
+      }
+    },
+    y: {
+      title: {
+        display: true,
+        text: 'Valores'
+      }
+    }
+  }
+};
+// Datos para el histograma
+const dataH = {
+  labels: ['Urtarrila','Otsaila','Martxoa','Apirila','Maiatza','Ekaina','Uztaila','Abuztua','Iraila','Urria','Azaroa','Abendua'],
+  datasets: [{
+    label: 'Hileroko Gastua',
+    data: dataHD,
+    backgroundColor: backgroundColor,
+    borderColor: borderColor,
+    borderWidth: 1
+  }]
+};
+
+// Configuración del histograma
+const optionsH = {
+  scales: {
+    x: {
+      title: {
+        display: true,
+        text: 'Hilabetea'
+      }
+    },
+    y: {
+      title: {
+        display: true,
+        text: 'Gastua (€)'
+      }
+    }
+  }
+};
+
+// Creamos el histograma
+const myChartH = new Chart(ctxH, {
+  type: 'bar',
+  data: dataH,
+  options: optionsH
+});
+
+</h:outputScript>
 <h2>GASTUA</h2>
 <br/>
  <h:form>
 	<table class="formularioa">
+	<tr>
+        <th>NOIZTIK</th><th>NORA</th><th>EKINTZA</th>
+        </tr>
 		<tr>
-			<td style="width: 50%;">
-				NOIZTIK:
+			<td>
 				<h:inputText value="#{aukera3FormMB.noiztik}" id="noiztik" required="true" requiredMessage="ERROREA: Data (NOIZTIK) eremua derrigorrezkoa da">
 					<f:convertDateTime type="date" pattern="yyyy/MM/dd" timeZone="CET"/>
   				</h:inputText>	
   				<h:message for="noiztik" style="color:red" />		
 			</td>
-			<td style="width: 50%;">
-				NORA:
+			<td>
 				<h:inputText value="#{aukera3FormMB.nora}" id="nora" required="true" requiredMessage="ERROREA: Data (NORA) eremua derrigorrezkoa da">
 					<f:convertDateTime type="date" pattern="yyyy/MM/dd" timeZone="CET"/>
   				</h:inputText>	
