--- a/VirtualMaid/src/main/webapp/EDUKIAK/gailuakEditatu.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/gailuakEditatu.xhtml
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="ESTILOA/gailuak.css"/>
   </head>
   <body id="body">
+  <form class="menuNagusirakoBotoia" action="#{request.contextPath}/index.html">
+	<input class="menuNagusirakoBotoiaInput" type="submit" id="submit" value="HOME" />
+  </form>
     <div class="container">
     <h:dataTable value="#{gailuAukeraketaViewMB.etxekoGailuakLortu()}" var="gailua"> 
         <h:column>
