--- a/VirtualMaid/src/main/webapp/EDUKIAK/gailuakEditatu.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/gailuakEditatu.xhtml
@@ -33,10 +33,12 @@
                     <h:inputText id="izena" value="#{gailuaFormMB.izena}" required="true" requiredMessage="Izena eremua derrigorrezkoa da."/>
                     <h:message for="izena" style="color:red" />
                 </td>
-                <td>
-                    <h:inputText id="mota" value="#{gailuaFormMB.mota}" required="true" requiredMessage="Mota eremua derrigorrezkoa da."/>
-                    <h:message for="mota" style="color:red" />
-                </td>
+               <td>
+					 <h:selectOneMenu id="mota" value="#{gailuaFormMB.mota}" required="true" requiredMessage="Mota eremua derrigorrezkoa da.">
+					 <f:selectItems value="#{erabiltzaileAtazakMB.gailuMotakLortu()}" />
+					 </h:selectOneMenu>
+					 <h:message for="mota" style="color:red" />
+				</td>
                 <td>
                		<h:inputText id="iraupena" value="#{gailuaFormMB.iraupena}" required="true" requiredMessage="Iraupena eremua derrigorrezkoa da."/>
                     <h:message for="iraupena" style="color:red" />
