--- a/VirtualMaid/src/main/webapp/EDUKIAK/historiala1.xhtml
+++ b/VirtualMaid/src/main/webapp/EDUKIAK/historiala1.xhtml
@@ -91,8 +91,10 @@
 	<ui:repeat  value="#{historialaViewMB.ordukaEgunekoProgramakLortu(erabiltzaileAtazakMB.gailuIzena)}" var="erregistroaOrduan" >
 		<h:form class="botoia">
 			<h:commandLink actionListener="#{erabiltzaileAtazakMB.programaEditatu01(erregistroaOrduan.id)}" rendered="#{erregistroaOrduan.hasieraOrduaInt gt erabiltzaileAtazakMB.currentHout}">
+			  <div>
 			  <span class="botoias">#{erregistroaOrduan.hasieraOrdua} - #{erregistroaOrduan.amaieraOrdua}</span>
 			  <em class="botoiaem">#{erregistroaOrduan.gailuIzena}</em>
+			  </div>
 			</h:commandLink>
 			<h:commandLink rendered="#{erregistroaOrduan.hasieraOrduaInt le erabiltzaileAtazakMB.currentHout}">
 			  <span class="botoias">#{erregistroaOrduan.hasieraOrdua} - #{erregistroaOrduan.amaieraOrdua}</span>
